# Luma

./: .gitignore  AGENTS.md  ARCHITECTURE_MAP.md  CONTRACTS.md  CURRENT_STATE.md  LAUNCHER_KEYBOARD_FLOW_MATRIX.md  LAUNCHER_SHOW_ENTRY_CONTRACT.md  LAUNCHER_STATE_AUDIT.md  LAUNCHER_STATE_OWNER_MAP.md  MODULE_MATRIX.md  MVP_SCOPE.md  P0_EXIT_SUMMARY.md  P1_EXIT_SUMMARY.md  P2_DECISION_MATRIX.md  P2_EXIT_SUMMARY.md  P2_ROADMAP.md  P2_SCOPE_AUDIT.md  P3_DOCS_GOVERNANCE_REPORT.md  P3_EXIT_SUMMARY.md  P3_PERFORMANCE_BUDGETS_REPORT.md  P3_RELEASE_HARDENING_REPORT.md  P3_TEST_ORGANIZATION_REPORT.md  PHASE11_LAUNCHER_REDUCTION_REPORT.md  PHASE12_SESSION_SHOW_GOVERNANCE_REPORT.md  PHASE15_P2_EXECUTION_REPORT.md  PHASE8_REVIEW_SUMMARY.md  PHASE9_MVP_SMOKE_REPORT.md  PHASE_22_EXIT_SUMMARY.md  PRODUCT_FLOWS.md  Package.swift  RC_BLOCKERS.md  README.md  REFACTOR_PLAN.md  USABILITY_REGRESSION_2026_07_07.md  USABILITY_TRIAGE.md
rust/: Cargo.toml  README.md  deny.toml
rust/bins/luma/: Cargo.toml
rust/bins/luma-menubar/: Cargo.toml
rust/bins/luma-menubar/src/: appkit.rs  instance_lock.rs  launcher.rs  main.rs  model.rs  worker.rs
rust/bins/luma/src/: cli_output.rs  cmd_cli.rs  compose.rs  main.rs  ports_cli.rs  ssh_cli.rs
rust/bins/luma/tests/: cli_blackbox.rs
rust/crates/luma-application/: Cargo.toml
rust/crates/luma-application/src/: engine.rs  interactive_terminal.rs  lib.rs  module.rs  paste.rs  port.rs  recipe_runner.rs  registry.rs
rust/crates/luma-application/src/adapters/: clipboard_repo.rs  command_recipes_repo.rs  diagnostics.rs  mod.rs  notes_repo.rs  ports_meta_repo.rs  quicklinks_repo.rs  records_repo.rs  resume_repo.rs  settings_repo.rs  snippets_repo.rs  ssh_meta_repo.rs  timers_repo.rs  wordbook_repo.rs
rust/crates/luma-application/src/engine/: actions.rs  cancel_intents.rs  cli.rs  command_dispatch.rs  doctor.rs  mod.rs  preview.rs  results.rs  search.rs  session.rs  tests.rs
rust/crates/luma-application/src/ports/: accessibility.rs  apps.rs  bounded_file_reader.rs  capability.rs  clipboard_repo.rs  clock.rs  command_recipes_repo.rs  command_runner.rs  diagnostics.rs  eventkit.rs  fake_recipe_environment.rs  git_info.rs  keychain.rs  markdown_watch.rs  memory_repos.rs  mod.rs  notes_repo.rs  notes_workspace.rs  open_editor.rs  open_path.rs  pasteboard.rs  platform_probe.rs  ports_meta_repo.rs  process.rs  process_catalog.rs  profile.rs  project_workspace.rs  proxy_core.rs  quicklinks_repo.rs  recipe_environment.rs  records_repo.rs  resume_repo.rs  settings.rs  snippets_repo.rs  speech.rs  ssh_config.rs  ssh_meta_repo.rs  storage_probe.rs  system_proxy.rs  timers_repo.rs  (+3 more)
rust/crates/luma-domain/: Cargo.toml
rust/crates/luma-domain/src/: error.rs  id.rs  lib.rs  privacy.rs  query.rs  recipe.rs  result_item.rs
rust/crates/luma-modules/: Cargo.toml
rust/crates/luma-modules/src/: apps.rs  ax_gated.rs  cancel.rs  clipboard.rs  clipboard_privacy.rs  fake.rs  kill.rs  lib.rs  media.rs  notes.rs  ports.rs  projects.rs  proxy.rs  quicklinks.rs  resume.rs  secrets.rs  snippets.rs  ssh.rs  timers.rs  todo.rs  translate.rs  ux.rs  windows.rs  wordbook.rs
rust/crates/luma-modules/src/command_recipes/: mod.rs
rust/crates/luma-modules/src/notes/: mod.rs  path_security.rs  preview.rs  rows.rs  search.rs  watch.rs
rust/crates/luma-modules/src/projects/: actions.rs  mod.rs  preview.rs  search.rs
rust/crates/luma-modules/src/proxy/: errors.rs  mod.rs  profiles.rs  redact.rs  search.rs
rust/crates/luma-modules/src/records/: mod.rs
rust/crates/luma-modules/src/ssh/: cache.rs  mod.rs  perform.rs  rename.rs  (+1 more)
rust/crates/luma-modules/tests/: paste_contract.rs  primary_action_contract.rs
rust/crates/luma-platform-macos/: Cargo.toml
rust/crates/luma-platform-macos/src/: accessibility.rs  apps.rs  automation.rs  bounded_file_reader.rs  clock.rs  eventkit.rs  fs_watch.rs  git_info.rs  keychain.rs  lib.rs  markdown_watch.rs  notes_workspace.rs  open_editor.rs  open_path.rs  pasteboard.rs  process.rs  process_catalog.rs  profile_store.rs  project_workspace.rs  proxy_core.rs  recipe_environment.rs  speech.rs  ssh_config.rs  system_proxy.rs  translation.rs  window.rs  window_stub.rs
rust/crates/luma-protocol/: Cargo.toml
rust/crates/luma-protocol/src/: command.rs  envelope.rs  event.rs  lib.rs
rust/crates/luma-storage/: Cargo.toml
rust/crates/luma-storage/src/: clipboard_store.rs  command_recipes_builtin.rs  command_recipes_config.rs  command_recipes_meta.rs  config.rs  importer.rs  lib.rs  migration_ledger.rs  notes_discover.rs  notes_ignore.rs  notes_index_store.rs  notes_parse.rs  notes_scan.rs  paths.rs  ports_meta_store.rs  quicklinks_store.rs  records_parse.rs  records_store.rs  resume_store.rs  snippets_store.rs  sqlite.rs  ssh_config_parse.rs  ssh_meta_store.rs  timers_store.rs  wordbook_store.rs
rust/crates/luma-test-support/: Cargo.toml
rust/crates/luma-test-support/src/: contract.rs  lib.rs
rust/crates/luma-tui/: Cargo.toml
rust/crates/luma-tui/src/: app.rs  effect.rs  engine_projection.rs  lib.rs  mock_engine.rs  module_shortcuts.rs  msg.rs  reducer.rs  render.rs  terminal.rs  theme.rs  view_model.rs
rust/docs/: BACKLOG.md  COMMAND_RECIPES.md  GOVERNANCE.md  MACOS_SMOKE.md  MODULES.md  PORTS.md  PROXY.md  SSH.md  USAGE_LOG_TEMPLATE.md  hub.md
rust/docs/adr/: 0001-rust-tui-product-shape.md  0002-defer-luma-agent.md  0003-macos-permission-spike-results.md  0004-windows-hub-projection.md  0005-records-and-imported-projects.md  0006-native-menubar-companion.md
rust/fixtures/legacy/: clipboard-history.sample.json  notes-config.sample.json
rust/fixtures/notes-workspaces/basic/: broken-frontmatter.md  link-source.md  link-target.md  readme.md  tags-demo.md
rust/fixtures/notes-workspaces/broken/: good.md
rust/fixtures/notes-workspaces/cjk/: chinese-note.md
rust/fixtures/notes-workspaces/hidden/: visible.md
rust/fixtures/notes-workspaces/large/: big.md  small.md
rust/fixtures/notes-workspaces/symlinks/: real.md
rust/scripts/: build_menubar_app.sh  check_architecture.sh  menubar-Info.plist  patch_engine_phase5.py  soak_runner.sh
(+874 files in other folders)
