[workspace]
resolver = "2"
members = [
    "crates/luma-domain",
    "crates/luma-protocol",
    "crates/luma-application",
    "crates/luma-modules",
    "crates/luma-platform-macos",
    "crates/luma-storage",
    "crates/luma-tui",
    "crates/luma-test-support",
    "bins/luma",
]
default-members = ["bins/luma"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.96.1"

[workspace.dependencies]
luma-domain = { path = "crates/luma-domain" }
luma-protocol = { path = "crates/luma-protocol" }
luma-application = { path = "crates/luma-application" }
luma-modules = { path = "crates/luma-modules" }
luma-platform-macos = { path = "crates/luma-platform-macos" }
luma-storage = { path = "crates/luma-storage" }
luma-tui = { path = "crates/luma-tui" }
luma-test-support = { path = "crates/luma-test-support" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "fs", "process", "io-util"] }
tokio-util = { version = "0.7", features = ["rt"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
anyhow = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
async-trait = "0.1"
dirs = "6.0"
rusqlite = { version = "0.32", features = ["bundled"] }
toml = "0.8"
tempfile = "3.14"
pulldown-cmark = "0.13"
serde_yaml = "0.9"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
unicode-width = "0.2"
