[package]
name = "luma-menubar"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Native macOS menu-bar companion for Luma"

[[bin]]
name = "luma-menubar"
path = "src/main.rs"

[dependencies]
dispatch2 = { version = "0.3.1", default-features = false, features = ["std"] }
luma-application = { workspace = true }
luma-platform-macos = { workspace = true }
luma-storage = { workspace = true }
objc2 = { version = "0.6.4", default-features = false, features = ["std"] }
objc2-app-kit = {
    version = "0.3.2",
    default-features = false,
    features = [
        "std",
        "NSApplication",
        "NSBezierPath",
        "NSMenu",
        "NSMenuItem",
        "NSColor",
        "NSImage",
        "NSResponder",
        "NSStatusBar",
        "NSStatusItem",
        "objc2-core-foundation",
    ],
}
objc2-foundation = {
    version = "0.3.2",
    default-features = false,
    features = ["std", "NSObject", "NSString"],
}
objc2-service-management = {
    version = "0.3.2",
    default-features = false,
    features = ["std", "SMAppService", "objc2", "objc2-core-foundation", "objc2-foundation"],
}
tokio = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
