[package]
name = "luma-application"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Engine, query dispatch, action execution — no TUI"

[dependencies]
luma-domain = { workspace = true }
luma-protocol = { workspace = true }
luma-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
luma-test-support = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
