[package]
name = "luma-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "SQLite/TOML adapters for LumaNext paths (Phase 4+)"

[dependencies]
luma-domain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
