[package]
name = "luma-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Single AppState TUI: update/render/effects (no business I/O)"

[dependencies]
luma-domain = { workspace = true }
luma-protocol = { workspace = true }
luma-application = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
unicode-width = { workspace = true }

[dev-dependencies]
luma-test-support = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
